--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -128,6 +128,18 @@ script_includes:
     {{ content }}
   </div>
 
+  <div class="google-ad">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2217162208301474" crossorigin="anonymous"></script>
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-format="autorelaxed"
+        data-ad-client="ca-pub-2217162208301474"
+        data-ad-slot="4435927275"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+    
   <div class="post-tail-wrapper text-muted">
     <!-- categories -->
     {% if page.categories.size > 0 %}
