Update google site verification in header

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,8 +16,9 @@ script_includes:
 
 <article class="px-1" data-toc="{{ enable_toc }}">
   <header>
+    <meta name="google-site-verification" content="lhxQiy2vplw4RmXWDFj6urNmjVdWKYWIbiHdCUlGVzg" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2217162208301474" crossorigin="anonymous"></script>
-
+    
     <h1 data-toc-skip>{{ page.title }}</h1>
     {% if page.description %}
       <p class="post-desc fw-light mb-4">{{ page.description }}</p>
