--- a/_includes/google-ad-post-bottom.html
+++ b/_includes/google-ad-post-bottom.html
@@ -1,10 +1,12 @@
 <div class="google-ad">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2217162208301474"
+       crossorigin="anonymous"></script>
   <ins class="adsbygoogle"
-      style="display:block"
-      data-ad-format="autorelaxed"
-      data-ad-client="ca-pub-2217162208301474"
-      data-ad-slot="4435927275"></ins>
+       style="display:block"
+       data-ad-format="autorelaxed"
+       data-ad-client="ca-pub-2217162208301474"
+       data-ad-slot="4435927275"></ins>
   <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
+       (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
 </div>
